# opencart-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  demo.tape  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: render_demo_svg.py
src/opencart_cli/: __init__.py  __main__.py  app.py  confirm.py  context.py  formatters.py
src/opencart_cli/commands/: ask.py  customers.py  demo.py  doctor.py  init.py  orders.py  products.py  profile.py  sales.py  settings.py  shell.py  sql.py  stock.py  watch.py
src/opencart_cli/core/: __init__.py  audit.py  config.py  connection.py  db.py  operations.py  secrets.py  version.py
tests/: test_smoke.py
